before fresh look

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
     <script src="./jquery/dist/jquery.min.js"></script>
 
+    <!--Main JS-->
+
+    <script src="./js/main.js"></script>
+
     <!--<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />-->
 
     <!--LightBox-->
@@ -50,7 +54,7 @@
         </div>
 
         <div class="logo">
-            <div class="logo__container container"><img src="./images/logo.png" alt="logo" class="logo__image" /></div>
+            <div class="logo__container"><img src="./images/logo.png" alt="logo" class="logo__image" /></div>
         </div>
 	</header><!-- .header-->
 
@@ -85,7 +89,7 @@
                         <h2 class="works-gallery__heading">Галерея работ</h2>
                         <div class="works-gallery__content">
                             <div class="works-gallery__row">
-                                <div class="gallery">
+                                <div class="gallery gallery--tufts">
                                     <a href="./images/image_01.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image01.jpeg" alt="image01" /></a>
                                     <a href="./images/image_02.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image02.jpeg" alt="image02" /></a>
                                     <a href="./images/image_03.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image03.jpeg" alt="image03" /></a>
@@ -95,10 +99,10 @@
                                     <a href="./images/image_03.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image03.jpeg" alt="image03" /></a>
                                     <a href="./images/image_04.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image04.jpeg" alt="image04" /></a>
                                 </div>
-                                <h3 class="gallery__name">Пучки</h3>
+                                <h3 class="gallery__name gallery__name--tufts">Пучки</h3>
                             </div>
                             <div class="works-gallery__row">
-                                <div class="gallery">
+                                <div class="gallery gallery--curls">
                                     <a href="./images/image_01.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image01.jpeg" alt="image01" /></a>
                                     <a href="./images/image_02.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image02.jpeg" alt="image02" /></a>
                                     <a href="./images/image_03.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image03.jpeg" alt="image03" /></a>
@@ -108,10 +112,10 @@
                                     <a href="./images/image_03.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image03.jpeg" alt="image03" /></a>
                                     <a href="./images/image_04.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image04.jpeg" alt="image04" /></a>
                                 </div>
-                                <h3 class="gallery__name">Локоны</h3>
+                                <h3 class="gallery__name gallery__name--curls">Локоны</h3>
                             </div>
                             <div class="works-gallery__row">
-                                <div class="gallery">
+                                <div class="gallery gallery--braids">
                                     <a href="./images/image_01.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image01.jpeg" alt="image01" /></a>
                                     <a href="./images/image_02.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image02.jpeg" alt="image02" /></a>
                                     <a href="./images/image_03.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image03.jpeg" alt="image03" /></a>
@@ -121,9 +125,9 @@
                                     <a href="./images/image_03.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image03.jpeg" alt="image03" /></a>
                                     <a href="./images/image_04.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image04.jpeg" alt="image04" /></a>
                                 </div>
-                                <h3 class="gallery__name">Косы</h3>
+                                <h3 class="gallery__name gallery__name--braids">Косы</h3>
                             </div>
-                            <div class="works-gallery__row">
+                            <!--<div class="works-gallery__row">
                                 <div class="gallery">
                                     <a href="./images/image_01.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image01.jpeg" alt="image01" /></a>
                                     <a href="./images/image_02.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image02.jpeg" alt="image02" /></a>
@@ -187,13 +191,13 @@
                                     <a href="./images/image_04.jpeg" data-lightbox="tufts"><img class="gallery__image" src="./images/small-image04.jpeg" alt="image04" /></a>
                                 </div>
                                 <h3 class="gallery__name">Афрокудри</h3>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="container">
+            <!--<div class="container">
                 <div class="row">
                     <div class="owl-carousel">
                         <img src="./images/small-image01.jpeg" alt="image_01" />
@@ -206,7 +210,7 @@
                         <img src="./images/small-image08.jpeg" alt="image_08" />
                     </div>
                 </div>
-            </div>
+            </div>-->
         </section>
 
 	</main><!-- .content -->
