changing some files and modules. testing of SSH key working

--- a/index.html
+++ b/index.html
@@ -910,7 +910,18 @@
             autoplayHoverPause: true,
             margin: 15,
             dots: true,
-            autoHeight: true
+            autoHeight: true,
+            responsive: {
+                0: {
+                    items: 1
+                },
+                768: {
+                    items: 2
+                },
+                992: {
+                    items: 3
+                }
+            }
         });
     });
 </script>
